# ai-safe2-framework

./: .markdownlint.json  .markdownlint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EVOLUTION.md  INTEGRATIONS.md  MAINTAINERS.md  README.md  VANGUARD_PROGRAM.md  docker-compose.yml  index.html  skill.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  interoperability.yml
.github/workflows/: ci.yml  deploy-dashboard.yml  lint.yml  opa.yml  publish.yml
00-cross-pillar/: README.md  cp5_mcp_sever_security.md
01-sanitize-isolate/: README.md
02-audit-inventory/: README.md
03-fail-safe-recovery/: README.md
04-engage-monitor/: README.md
05-evolve-educate/: README.md
AISM/: AISM-Compliance-Crosswalk.md  AISM-Scoring-Matrix-Methodology.md  AISM-Self-Assessment-Tool.md  README.md  agent-threat-control-matrix.md  control-stack.md  maturity-model.md  operational-loop.md  sovereignty-matrix.md  strategic-architecture.md
ASIM/: README.md
FORGE-Act/: FORGE-Act_Build-It-Yourself.html.html  FORGE-Act_Campaign-Toolkit.html.html  FORGE-Act_District-Action-Plan.html.html  FORGE-Act_Marshall-Plan-For-AI.html.html  FORGE-Act_Overview.html.html  FORGE-Act_Real-Purpose-Zero-Grift.html.html  FORGE-Act_Sovereignty-Is-The-Flex.html.html  FORGE-Act_What-They-Inherit.html.html  README.md
NEXUS/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
NEXUS/compliance/scoring/: nexus-score.py
NEXUS/docker/: .env.example  docker-compose.yml
NEXUS/docker/gateway/: Dockerfile  gateway.py
NEXUS/docker/otel/: collector-config.yaml
NEXUS/docker/spire/: server.conf
NEXUS/examples/: acs_bridge.py  personal_agent.py  sovereign_gateway.py
NEXUS/governance/: GOVERNANCE.md  ietf-draft-nexus-l1-l2.md
NEXUS/opa/: nexus-aism-invariants.rego  nexus-authz.rego
NEXUS/schemas/: agbom-v0.3.schema.json  aim-v0.2.schema.json  guardian-v0.3.schema.json  nor-v0.3.schema.json
NEXUS/sdk/python/: README.md  requirements.txt
NEXUS/sdk/python/nexus_sdk/: __init__.py  agbom.py  cael.py  guardian.py  memory.py  otel.py
NEXUS/sdk/python/nexus_sdk/bridges/: __init__.py
NEXUS/sdk/python/tests/: __init__.py  conftest.py  test_nexus_complete.py  test_nexus_v03.py
assets/: index-Cxn27gNq.js
dashboard/: App.tsx  README.md  find_duplicates.js  index.html  metadata.json  package.json  types.ts  vite.config.ts
dashboard/components/: ControlCard.tsx  ControlModal.tsx  Icons.tsx  Logo.tsx  README.md  RiskBadge.tsx  Sidebar.tsx
examples/anti-gravity-sovereign-runtime/: .gitignore  .markdownlint.json  INTEGRATION-GUIDE.md  README.md  deploy.ps1  smoke_test.js
examples/autogen-sovereign-runtime/: .env.example  QUICKSTART.md  README.md  requirements.txt  smoke_test.py
examples/claude-code-sovereign-runtime/: ARTICLE.md  CLAUDE.md  QUICKSTART.md  README.md  setup-claude-safe.sh
examples/codex-sovereign-runtime/: AGENTS.md  ARTICLE.md  EVALUATION.md  QUICKSTART.md  README.md  setup-codex-safe.ps1  setup-codex-safe.sh
examples/crewai-sovereign-runtime/: .env.example  QUICKSTART.md  README.md  requirements.txt  (+1 more)
examples/mcp-security-toolkit/: README.md  pyproject.toml
examples/mcp-security-toolkit/examples/: mcp-safe-wrap.toml  mcp-security.json  servers-batch.txt
examples/mcp-security-toolkit/src/aisafe2_mcp_tools/scan/: __main__.py  analyzer.py  ast_analyzer.py  dep_checker.py  findings.py  pattern_scanner.py  reporter.py
examples/mcp-security-toolkit/src/aisafe2_mcp_tools/scan/fixes/: CTI-001.template  INJ-001.template  LOG-001.template  RCE-001.template  RCE-002.template  RCE-003.template  RCE-004.template  RCE-005.template  RCE-006.template  SEC-001.template  STP-001.template
examples/mcp-security-toolkit/src/aisafe2_mcp_tools/score/: __main__.py  assessor.py  auth_checker.py  badge.py  header_checker.py  models.py  reporter.py  schema_scanner.py  scorer.py  ssrf_detector.py
examples/mcp-security-toolkit/src/aisafe2_mcp_tools/shared/: patterns.py
examples/mcp-security-toolkit/src/aisafe2_mcp_tools/wrap/: __main__.py  audit.py  proxy.py  ratelimit.py  scanner.py  wrapper.py
examples/mcp-security-toolkit/tests/: test_integration.py  test_toolkit.py
gateway/: README.md  main.py  provider_adapters.py  test_gateway.py
guides/: DEVELOPER_IMPLEMENTATION.md  claude-code-velocity-and-governance.html  moltbot-hardening.md  v3-release-overview.md
policies/: default.yaml
research/: 012_the_7_layer_stack.md  013_the_7_layer_stack.md  014_compensating_controls_spec.md  015_hear_doctrine_human_ethical_agent_of_record.md  016_agent_replication_governance.md  017_nhi_orchestration_board_and_regulator_view.md  018_agentic_bias_as_operational_risk.md  019_protocol_layer_supply_chain_risks.md  020_agentic_ransomware_and_malicious_operators.md  021_temporal_attack_profiles.md  022_cognitive_surface_and_memory_drift.md  023_mcp-server-security-profile.md  024_mcp_consumer_protection.md
resources/: NIST_AI_Agent_Standards_Initiative_RFI_Submission  NIST_AI_Agent_Standards_Initiative_RFI_Submission.md  moltbot_clawdbot_security_resource_map.md  pillar1_checklist_lite.md
scanner/: README.md  __init__.py  cli.py  report.py  requirements.txt  scanner.py
skills/: README.md  SKILL.md  evals.md  skill-spec.md  skill_md_root_redirect.md
skills/mcp/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/mcp/client-config/: claude-code-config.md  codex-config.toml  local-stdio-example.json
skills/mcp/data/: ai-safe2-controls-v3.0.json  generate_controls.py
skills/mcp/src/mcp_server/: __init__.py  app.py  auth.py  config.py  context.py  controls_db.py  ratelimit.py  sanitize.py  tiers.py
skills/mcp/src/mcp_server/prompts/: registry.py
skills/mcp/src/mcp_server/resources/: registry.py
skills/mcp/src/mcp_server/tools/: classify_agent.py  code_review.py  compliance_mapping.py  control_lookup.py  risk_scoring.py
skills/mcp/tests/: test_security.py  test_smoke_https.py  test_tools.py
src/: cli.py  report.py
(+244 files in other folders)
