[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nexus-a2a-sdk"
version = "0.3.0"
description = "NEXUS-A2A Python SDK: cryptographic governance for agentic AI communication"
readme = "sdk/python/README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Cyber Strategy Institute", email = "sdk@cyberstrategyinstitute.com" }
]
keywords = [
    "ai-agents", "agent-security", "agentic-ai", "mcp", "a2a",
    "ai-governance", "zero-trust", "safe2", "opa", "spiffe",
    "guardian", "memory-vaccine", "nexus"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Core dependencies: intentionally minimal.
# All security-critical logic is pure Python with stdlib only.
# Optional extras below unlock production capabilities.
dependencies = []

[project.optional-dependencies]
# Production embeddings: enables real semantic drift detection in Memory Vaccine
# (required for ACT-2+ deployments; stub mode is dev-only)
embeddings = [
    "sentence-transformers>=2.7.0",
]

# OPA integration: production policy enforcement over HTTP
opa = [
    "httpx>=0.27.0",
]

# OpenTelemetry export: NOR spans to SIEM via OTLP
otel = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

# Full production stack: embeddings + OPA + OTel
full = [
    "nexus-a2a-sdk[embeddings]",
    "nexus-a2a-sdk[opa]",
    "nexus-a2a-sdk[otel]",
]

# Development: testing and linting
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://cyberstrategyinstitute.com/nexus"
Repository = "https://github.com/CyberStrategyInstitute/ai-safe2-framework"
Documentation = "https://cyberstrategyinstitute.com/nexus/docs"
"Security Policy" = "https://github.com/CyberStrategyInstitute/ai-safe2-framework/blob/main/nexus-a2a/SECURITY.md"
"Issue Tracker" = "https://github.com/CyberStrategyInstitute/ai-safe2-framework/issues"
Changelog = "https://github.com/CyberStrategyInstitute/ai-safe2-framework/blob/main/nexus-a2a/CHANGELOG.md"

[project.scripts]
nexus-score = "nexus_sdk._cli:main"

[tool.setuptools.packages.find]
where = ["sdk/python"]
include = ["nexus_sdk*"]

[tool.setuptools.package-data]
nexus_sdk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["sdk/python/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["nexus_sdk"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
