[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-safe2-mcp-server"
version = "3.0.0"
description = "AI SAFE2 v3.0 MCP Server — 161-control governance toolkit for agentic AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Cyber Strategy Institute", email = "info@cyberstrategyinstitute.com" }
]
keywords = ["ai-safety", "mcp", "governance", "agentic-ai", "grc", "iso42001"]

dependencies = [
    # MCP server framework
    "mcp>=1.3.0",
    # ASGI / HTTP serving
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.40.0",
    # Data validation
    "pydantic>=2.7.0",
    # HTTP client for external calls (tools may need it)
    "httpx>=0.27.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Environment config
    "python-dotenv>=1.0.0",
    # Structured logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
ai-safe2-mcp = "mcp_server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
